3.1-0
	* Fixed bug in cv.ncvreg with univariate regression (thank you to
	  Diego Franco Saldana for pointing this out)

3.0-0
	* Revised internal algorithms to incorporate targeted cycling
	  based on strong rules
	* Moved standardization to C
	* Moved calculation of lambda sequence to C
	* As a result of the above three changes, ncvreg now runs
	  much faster for large p
	* Added fir(), perm.ncvreg(), and plot.fir() functions for the
	  purposes of estimating and displaying false inclusion rates;
	  these are likely to evolve over the next few months
	* Fixed a bug in cv.ncvreg for user-specified lambda sequence

2.7-0
	* Added "vars" and "nvars" options to predict function.
	* Modified look of summary(cvfit) output.
	* Modified internal details of .Call interface.

2.6-0
	* Introduction of function ncvreg_fit for programmers who want to
	  access the internal C routines of ncvreg, bypassing internal
	  standardization and processing
	* Internal restructuring: .Call now used instead of .C
	* Bug fix for axis annotations with plot.cv.ncvreg when model is
	  saturated.
	* Bug fix for deviance calculation; would return NaN if fitted
	  probabilities of 0 or 1 occurred for binomial outcomes.
	* Bug fix in NAMESPACE for coef.cv.ncvreg and predict.cv.ncvreg
	* Added vertical.line and col options to plot.cv.ncvreg

2.5-0
	* Added options in plot.cv.ncvreg to plot estimates of r-squared,
	   signal-to-noise ratio, scale parameter, and prediction error in
	   addition to cross-validation error (deviance)
	* Added summary method for cv.ncvreg which displays the above
	   information at lambda.min, the value of lambda minimizing the
	   cross-validation error.
	*  Fixed bug in cv.ncvreg with user-defined lambda values.

2.4-0
	* Fixed error in definition/calculation of cross-validation
	   error and standard error
	* Added penalty.factor option
        *  cv.grpreg: Now returns full data fit as well as CV errors
	*  coef and predict methods now accept lambda as argument