@@ -3,7 +3,7 @@ summary.cv.ncvreg <- function(object, ...) {
   rsq <- S/object$null.dev
   snr <- S/object$cve
   nvars <- predict(object$fit, type="nvars")
-  model <- switch(object$fit$family, gaussian=="linear", binomial="logistic", poisson="Poisson")
+  model <- switch(object$fit$family, gaussian="linear", binomial="logistic", poisson="Poisson")
   val <- list(penalty=object$fit$penalty, model=model, n=object$fit$n, p=nrow(object$fit$beta)-1, min=object$min, lambda=object$lambda, cve=object$cve, r.squared=rsq, snr=snr, nvars=nvars)
   if (object$fit$family=="gaussian") val$sigma <- sqrt(object$cve)
   if (object$fit$family=="binomial") val$pe <- object$pe
