@@ -10,8 +10,8 @@
   \tabular{ll}{
     Package: \tab ncvreg\cr
     Type: \tab Package\cr
-    Version: \tab 3.0-0\cr
-    Date: \tab 2014-02-05\cr
+    Version: \tab 3.1-0\cr
+    Date: \tab 2014-02-25\cr
     License: \tab GPL-2\cr}
   Accepts a design matrix \code{X} and vector of responses \code{y},
   produces the regularization path over a grid of values for the tuning
