@@ -64,7 +64,7 @@ SEXP cdfit_raw(SEXP X_, SEXP y_, SEXP penalty_, SEXP lambda, SEXP eps_, SEXP max
   for (int j=0; j<p; j++) v[j] = sqsum(X, n, j)/n;
   int *e = Calloc(p, int);
   for (int j=0; j<p; j++) e[j] = 0;
-  double cutoff, l1, l2, u;
+  double l1, l2, u;
   int converged;
 
   // Path
