@@ -1,4 +1,7 @@
 3.1-0
+	* Added support for Poisson regression
+	* Fixed bug in ncvreg_fit that could arise when fitting a model
+	  without an intercept
 	* Fixed bug in cv.ncvreg with univariate regression (thank you to
 	  Diego Franco Saldana for pointing this out)
 
